--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
-    "next": "15.3.2",
+    "next": "^15.4.1",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
